@@ -1,0 +1,19 @@
+/* bug-1817005.c
+ */
+
+#include <testfwk.h>
+
+/* this is an assemble time test, so it doesn't have to be executed */
+
+int
+function_with_really_long_name(void)
+{
+  return 0;
+}
+
+/* dummy test function */
+
+void
+testDummy(void)
+{
+}
